--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ font-size: 30px;
     transition: 0.3s;
     margin: 25px;
     float: left;
-    background-color: rgb(25, 11, 39);
+    background-color: white
     
 }
 .card:hover {
