--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 body {
-    /* background-color: lightskyblue; */
-    background-image: url(../images/blue.png);
+    background-color: lightskyblue;
+    /* background-image: url(../images/blue.png); */
     font-family: 'Julius Sans One', sans-serif;
 
 }
 
 #header{
     height: 75px;
-    /* background-color: white; */
+    background-color: white;
     margin: 0 auto;
     text-align: center;
     /* opacity: 0.5; */
@@ -19,7 +19,7 @@ body {
     background-color: transparent;
     border-color: transparent;
     font-weight: bolder;
-    color:white;
+    /* color:white; */
 }
 #agpic {
     height:400px;
@@ -32,7 +32,7 @@ body {
     margin: 0 auto;
     margin-top: 30px;
     text-align: center;
-    color: blue;
+    /* color: blue; */
 }
 p {
     margin: 20px;
