--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,29 @@ body {
 
 }
 
+#home {
+
+    width: 600px;
+    height:400px;
+    border: 20px;
+    border: solid white;
+    margin: 0 auto;
+}
+#hometext {
+    color: white;
+    margin-top:100px;
+    font-size: 45px;
+    font-weight: bolder
+}
+
 #header{
     height: 75px;
-    background-color: white;
+    /* background-color: white; */
     margin: 0 auto;
     text-align: center;
-    /* opacity: 0.5; */
+    border-bottom: solid white;
+    border: 15px;
+
 }
 .headerbutton {
     margin: 20px;
@@ -19,7 +36,8 @@ body {
     background-color: transparent;
     border-color: transparent;
     font-weight: bolder;
-    /* color:white; */
+    color:white;
+    font-size: 25px;
 }
 #agpic {
     /* height:400px; */
@@ -34,7 +52,7 @@ body {
     margin: 0 auto;
     margin-top: 30px;
     text-align: center;
-    /* color: blue; */
+    color: forestgreen;
 }
 p {
     margin: 20px;
@@ -73,4 +91,8 @@ font-size: 30px;
     height: 300px;
     width: 300px;
     margin: 25px;
+}
+#resumepdf {
+    height:1000px;
+    width:800px;
 }
