--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,16 +29,7 @@ body {
     border: 15px;
 
 }
-.headerbutton {
-    margin: 20px;
-    opacity: 1.0;
-    font-family: 'Julius Sans One', sans-serif;
-    background-color: transparent;
-    border-color: transparent;
-    font-weight: bolder;
-    color:white;
-    font-size: 25px;
-}
+
 #agpic {
     /* height:400px; */
     /* width: 300px; */
@@ -109,3 +100,28 @@ a:visited {
     background-color: forestgreen;
     border-color: forestgreen;
 }
+
+/* Bounce Out */
+.hvr-bounce-out {
+    margin: 20px;
+    opacity: 1.0;
+    font-family: 'Julius Sans One', sans-serif;
+    background-color: transparent;
+    border-color: transparent;
+    font-weight: bolder;
+    color:white;
+    font-size: 25px;
+    display: inline-block;
+    vertical-align: middle;
+    /* -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s; */
+  }
+  .hvr-bounce-out:hover, .hvr-bounce-out:focus, .hvr-bounce-out:active {
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  }
