--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
     text-align: center;
     border-bottom: solid white;
     border: 15px;
-
+    margin-bottom: 10px;
 }
 
 #agpic {
@@ -113,15 +113,21 @@ a:visited {
     font-size: 25px;
     display: inline-block;
     vertical-align: middle;
-    /* -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s; */
   }
   .hvr-bounce-out:hover, .hvr-bounce-out:focus, .hvr-bounce-out:active {
     -webkit-transform: scale(0.8);
     transform: scale(0.8);
     -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
     transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  }
+
+  @media screen and (max-width: 640px) {
+    #display {
+
+        width: 90%;
+        margin-top:60px;
+        
+    }
+
+
   }
