--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ body {
     margin-top: 30px;
     text-align: center;
     color: forestgreen;
+    width: 800px;
 }
 p {
     margin: 20px;
@@ -121,13 +122,40 @@ a:visited {
     transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
   }
 
-  @media screen and (max-width: 640px) {
+  @media screen and (max-width: 680px) {
     #display {
 
-        width: 90%;
+        width: 350px;
         margin-top:60px;
         
     }
+    .card {
+        width:
+        300px;
+    }
+    .cardimg{
+        height: 250px;
+        width: 250px;
+        margin: 25px;
+    }
+    #agimg {
+       
+        width: 270px;
+    }
+    #home {
+
+        width: 300px;
+        height:500px;
+        border: 20px;
+        font-size: 25px;
+        border: solid white;
+        
+        margin: 0 auto;
+    }
+    #qspace {
+        height: 30px;
+    }
+
 
 
   }
