--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,8 @@ body {
     color: white;
     margin-top:100px;
     font-size: 45px;
-    font-weight: bolder
+    font-weight: bolder;
+    font-family: 'Julius Sans One', sans-serif;
 }
 
 #header{
@@ -44,8 +45,15 @@ body {
     margin-top: 30px;
     text-align: center;
     color: forestgreen;
+    font-family: 'Libre Baskerville', serif;
+    /* letter-spacing: .05cm; */
+    line-height: .9cm;
+    font-size: 20px;
 
 }
+/* #brand
+    font-family: 'Poppins', serif;
+} */
 
 p {
     margin: 20px;
